[tool.poetry]
name = "aiogram-nats"
version = "0.1.0"
description = "Yet another implementation of aiogram storage with Nats"
authors = ["Łukasz Tshipenchko <dev@zxc.sx>"]
license = "MIT"
readme = "README.md"
packages = [{include = "aiogram_nats"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
