[tool.poetry]
name = "aiogram-nats"
version = "0.1.0"
description = "Yet another implementation of aiogram storage with Nats"
authors = ["Łukasz Tshipenchko <dev@zxc.sx>"]
license = "MIT"
readme = "README.md"
packages = [{include = "aiogram_nats"}]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "3.0.0b7"
nats-py = "^2.2.0"
ormsgpack = "^1.2.5"


[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
